--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - .env
     networks:
       - proxy
+      - frontend
+      - backend
     ports:
       - "80:80"
       - "443:443"
@@ -26,20 +28,27 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.${DOMAIN}`)"
+      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.${DOMAIN1}`)"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
       - "traefik.http.routers.traefik-secure.entrypoints=https"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.${DOMAIN}`)"
+      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.${DOMAIN1}`)"
       - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].main=${DOMAIN}"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.${DOMAIN}"
+      - "traefik.http.routers.traefik-secure.tls.domains[0].main=${DOMAIN1}"
+      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.${DOMAIN1}"
+      - "traefik.http.routers.traefik-secure.tls.domains[1].main=${DOMAIN2}"
+      - "traefik.http.routers.traefik-secure.tls.domains[1].sans=*.${DOMAIN2}"
+      
       - "traefik.http.routers.traefik-secure.service=api@internal"
 
 networks:
   proxy:
+    external: true
+  frontend:
+    external: true
+  backend:
     external: true
