--- a/mickey7-nginx/docker-compose.yml
+++ b/mickey7-nginx/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     environment:
       - NGINX_HOST=mickey21.${DOMAIN}
       - NGINX_PORT=80
+      - TZ=Europe/London
+      - PGID=1000
+      - PUID=1000
     networks:
       - frontend
     security_opt:
