--- a/mickey7-nginx/docker-compose.yml
+++ b/mickey7-nginx/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - "traefik.http.routers.nginx-secure.tls=true"
       - "traefik.http.routers.nginx-secure.tls.certresolver=cloudflare"
       # Service configuration
+      #- "traefik.http.routers.nginx-secure.middlewares=authentik@file"
       - "traefik.http.services.nginx-service.loadbalancer.server.port=80"
       - "traefik.http.routers.nginx-secure.service=nginx-service"
 
