--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   reverse-proxy:
-    image: traefik:v3.3
+    image: traefik:latest
     container_name: traefik_for_applications
     restart: unless-stopped
     security_opt:
