--- a/.gitignore
+++ b/.gitignore
@@ -15,38 +15,11 @@ node_modules/
 Thumbs.db
 
 # Extra Folders folder
-bazarr/
-cloudflare-ddns/config/
-docmost/
-downloads/
-gigaplex-resources/
-grafana/
-heimdall/
-homepage/
-influxdb/*
-immich-app/postgres/
-kometa/config/logs
-kometa/config/assets
-kometa/config/overlays
-mysql/
-nextcloud/db/
-nextcloud/html/
-nginx/data/
-nginx/letsencrypt/
-nodered/
-plex/
-plextraktsync/
-prowlarr/
-qbittorrent/
-radarr/
-sonarr/
-tautulli/
-tdarr/
-traefik/
-
-/tailscale-infrarr/config/*
+firefox/config/*
+tailscale-infrarr/config/*
 bind9/config/*
 homepage/config/*
-traefik-tailscale/data/*
-
 pihole/etc-pihole/*
+pihole/etc-dnsmasq.d/*
+watchyourports/config/*
+traefik/data/*
