--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,45 +1,51 @@
 services:
-  traefik:
-    image: traefik:v3.0
-    container_name: traefik
+  reverse-proxy:
+    image: traefik:latest
+    container_name: traefik_for_infrarr
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
+    env_file:
+      - .env
     networks:
       - proxy
+      - backend
     ports:
-      - 80:80
-      - 443:443
-      - 8080:8080
-      # - 443:443/tcp # Uncomment if you want HTTP3
-      # - 443:443/udp # Uncomment if you want HTTP3
+      - "80:80"
+      - "443:443"
     environment:
-      CF_DNS_API_TOKEN: ${CF_DNS_API_TOKEN}
-      TRAEFIK_DASHBOARD_CREDENTIALS: ${TRAEFIK_DASHBOARD_CREDENTIALS}
-    env_file: .env # use .env
+      - TRAEFIK_DASHBOARD_CREDENTIALS=${TRAEFIK_DASHBOARD_CREDENTIALS}
+      - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN}
+      - CF_DNS_API_EMAIL=${CF_DNS_API_EMAIL}
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./data/traefik.yml:/traefik.yml:ro
+      - ./data/traefik.yml:/etc/traefik/traefik.yml:ro
       - ./data/acme.json:/acme.json
-      # - ./data/config.yml:/config.yml:ro
+      - ./data/config.yml:/etc/traefik/config.yml:ro
+      - ./data/logs:/var/log/traefik
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.${DOMAIN}`)"
+      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.${DOMAIN1}`)"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
       - "traefik.http.routers.traefik-secure.entrypoints=https"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.${DOMAIN}`)"
+      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.${DOMAIN1}`)"
       - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].main=${DOMAIN}"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.${DOMAIN}"
+      - "traefik.http.routers.traefik-secure.tls.domains[0].main=${DOMAIN1}"
+      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.${DOMAIN1}"
+      - "traefik.http.routers.traefik-secure.tls.domains[1].main=${DOMAIN2}"
+      - "traefik.http.routers.traefik-secure.tls.domains[1].sans=*.${DOMAIN2}"
+      
       - "traefik.http.routers.traefik-secure.service=api@internal"
 
 networks:
   proxy:
+    external: true
+  backend:
     external: true
