--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ n8n/data/*
 /heyform/assets/*
 
 ea-in-bloom/web/images/*
+
+wedding-share/data-volume-config/*
+wedding-share/data-volume-custom-resources/*
+wedding-share/data-volume-thumbnails/*
+wedding-share/data-volume-uploads/*
