--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.apps.${DOMAIN1}`)||Host(`traefik-dashboard.${DOMAIN1}`)"
+      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.apps.${DOMAIN1}`)||Host(`traefik-apps.${DOMAIN1}`)"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
