--- a/heyform-ea_in_bloom/docker-compose.yml
+++ b/heyform-ea_in_bloom/docker-compose.yml
@@ -1,4 +1,6 @@
 networks:
+  heyform-ea:
+    name: heyform-ea
   keydb-ea:
   mongo-ea:
   frontend:
@@ -33,8 +35,7 @@ services:
       - mongo-ea
       - redis-ea
     networks:
-      - mongo-ea
-      - keydb-ea
+      - heyform-ea
       - frontend
       - backend
     labels:
@@ -61,7 +62,7 @@ services:
     volumes:
       - ./config/mongodb_data_ea:/data/db
     networks:
-      - mongo-ea
+      - heyform-ea
     command: --wiredTigerCacheSizeGB 0.25
 
   redis-ea:
@@ -72,7 +73,7 @@ services:
     volumes:
       - ./config/redis_data_ea:/data
     networks:
-      - keydb-ea
+      - heyform-ea
 
 volumes:
   mongodb_data_ea:
