--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     networks:
       - frontend
     container_name: n8n
+    env_file:
+      - .env
     labels:
       - "traefik.enable=true"
       # HTTP Router
@@ -23,12 +25,6 @@ services:
       - "traefik.http.routers.n8n.middlewares=default-security-headers@file"
       #- "traefik.http.routers.n8n-secure.middlewares=n8n-headers"
       #- "traefik.http.routers.n8n-secure.middlewares=default-security-headers@file"
-
-
-
-
-
-
 
     environment:
       - N8N_HOST=n8n.${DOMAIN}
