--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ tautulli/config/*
 gluetun/config/servers.json
 tailscale-media/config/*
 traefik/data/*
+traefik-media/data/*
 
 #Download Clients
 servarr/qbittorrent/*
@@ -47,3 +48,5 @@ servarr/gluetun-config/*
 qbittorrent/config/*
 download-stack/config-qbittorrent/*
 download-stack/config-gluetun/*
+
+pulsarr/data/*
