--- a/wedding-share/docker-compose.yml
+++ b/wedding-share/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./data-volume-config:/app/config
       - ./data-volume-thumbnails:/app/wwwroot/thumbnails
-      - ./data-volume-uploads:/app/wwwroot/uploads
+      - /mnt/immich-app/wedding-share:/app/wwwroot/uploads
       - ./data-volume-custom-resources:/app/wwwroot/custom_resources
     labels:
       - "traefik.enable=true"
