--- a/beszel/docker-compose.yml
+++ b/beszel/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 8090:8090
     volumes:
       - ./config:/beszel_data
+    environment:
+      TZ: Europe/London
 
   beszel-agent:
     image: "henrygd/beszel-agent"
@@ -20,3 +22,6 @@ services:
     environment:
       LISTEN: 45876
       KEY: ${BESZEL_KEY}
+      TOKEN: ${TOKEN}
+      HUB_URL: ${HUB_URL}
+      TZ: Europe/London
